--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #000000; /* Dark background color */
+  background-color: #f7f4f4; /* Dark background color */
 
-  font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
