--- a/src/components/CSS/car.css
+++ b/src/components/CSS/car.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 #root {
-  max-width: 1280px;
+  width: 80%;
   margin: 0 auto;
   padding: 0;
   text-align: center;
