--- a/src/components/CSS/car.css
+++ b/src/components/CSS/car.css
@@ -1,13 +1,16 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-#root {
-  width: 80%;
-  margin: 0 auto;
-  padding: 0;
+.popup {
+  background: rgba(0, 0, 0, 0.8);
+  padding: 15px;
+  border-radius: 10px;
+  color: white;
   text-align: center;
 }
-
-
-
-
+.popup button {
+  margin-top: 10px;
+  padding: 5px 10px;
+  background: red;
+  border: none;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+}
