--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -13,20 +14,17 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
 }
 
-
-
 body {
- 
   margin: 0;
   padding: 0;
   height: 100%;
   overflow-x: hidden;
  
 }
-/* Navbar.css */
-
 /* Reset default margin and padding */
 * {
   margin: 0;
@@ -45,8 +43,7 @@ body {
   justify-content: space-between;
   padding: 20px 40px;     /* Increase padding for a larger navbar */
   background-color: #1d1d1d; /* Dark background color */
-  z-index: 1000;
-           /* Ensure it stays above other content */
+  z-index: 1000; /* Ensure it stays above other content */
 }
 .Intro-container{
   position: fixed;    
